Changes in version: SGP_0.7-0.0

  o ETHNICITY and GENDER variables are no longer required to create anonymized (random name) student growth plots. Dummy values are created if missing. 
  o Began outputSGP as a function to faciliate output of SGP results in common formats. 
  o Added robust parallelism to analyzeSGP to better facilitate analysis of large scale data sets on multi-core/multi-cpu environments. 
  o Added functionality to combineSGP to merge in baseline student growth percentiles and baseline student growth percentile targets.
  o Added functionality to analyzeSGP to calculate baseline student growth projections and lagged baseline student growth projections.
  o Fixed a bug preventing use of provided CSEM variable when supplied as an addition variable in the supplied data.frame.
  o Fixed a bug in visualizeSGP for studentGrowthPlot production when sgPlot.years is supplied.
  o Refined scale score axis span and labels in growth achievement plot. 
  o Changed goodness.of.fit default to TRUE with the calculation of baseline student growh percentiles. 
  o Added state test abbreviation to main title of bubble plots. 
  o Refined analyzeSGP and baselineSGP to deal with non-consecutive grades when calculating baseline referenced student growth percentiles. 
  o Added Utah data to stateData. 
  o Fixed naming issue in bubblePlot_Style 2. 
  o Fixed bugs impacting states with non-uniform cutscores by year in bubblePlot_Styles and studentGrowthPlot (Thanks Juan D'Brot). 
  o Fixed a bug preventing users from using their own supplied list of cutscores (Thanks Katherine Castellano). 
  o Added baseline coefficient matrices for Massachusetts to stateData and changed cutscores to match gtheta values used in SGP calculations. 
  o Added dummy instructor numbers, weights, and enrollment status to sgpData_LONG. 
  o Changed "Date" slot to "Version" slot in splineMatrix class so that SGP version meta-data was available and consistent with SGP class.