@@ -1,14 +1,14 @@
 citHeader("To cite package 'SGP' in publications use:")
 
 citEntry(entry = "Manual",
-         title        = "{SGP}: An R Package for the Calculation and Visualization of Student Growth Percentiles",
+         title        = "{SGP}: An R Package for the Calculation and Visualization of Student Growth Percentiles & Percentile Growth Trajectories.",
          author       = "Damian W. Betebenner and Adam Van Iwaarden",
          year         = "2011",
-         note         = "R package version 0.7-0.0",
+         note         = "R package version 0.7-1.0",
          url          = "http://cran.r-project.org/web/packages/SGP/index.html",
          
          textVersion  = paste("Damian W. Betebenner & Adam Van Iwaarden (2011).",
-                        "SGP: An R Package for the Calculation and Visualization of Student Growth Percentiles.",
-                        "(R package version 0.7-0.0.",
+                        "SGP: An R Package for the Calculation and Visualization of Student Growth Percentiles & Percentile Growth Trajectories.",
+                        "(R package version 0.7-1.0.",
                         "URL http://cran.r-project.org/web/packages/SGP/index.html")
 )
